stop navbar-right flex-wrap

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -225,7 +225,7 @@
 
             .navbar-right {
                 display: flex;
-                flex-wrap: none;
+                flex-wrap: nowrap;
                 justify-content: center;
                 padding-top: 12px;
 
